fix: Skin: Tooltips using wrong font color on Win/Mac http://bugs.activestate.com/show_bug.cgi?id=100299
(integrated from komodo (trunk) change 81889 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13612 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -541,6 +541,7 @@ tooltip
     -moz-appearance: @tooltip-appearance;
     background: @tooltip-background;
     border: @tooltip-border;
+    color: @tooltip-color;
 
     description
     {
